# Product-Recommender

./: README.md  pyproject.toml  setup.py
Active_Customers/: README.md
Inactive_Customers/: README.md  config.py  requirements.txt  utils.py
Inactive_Customers/Score/: cluster_predict.sql  query.sql  score.py
Inactive_Customers/Train/: README.txt  cluster_training.sql  training.py  training_query.sql
Product-Pairs/: README.md  query.sql  requirements.txt  sku_pair.ipynb
